# vapoursynth-Bilateral

./: meson.build
.github/workflows/: build.yaml
include/: Bilateral.h  Gaussian.h  Helper.h
source/: Bilateral.cpp  Gaussian.cpp  VSPlugin.cpp
